--- a/VeryGoodBook_Web/WebContent/index.html
+++ b/VeryGoodBook_Web/WebContent/index.html
@@ -13,9 +13,11 @@
   <body>
     <h1>非常好書</h1>
     <hr />
-    <a href="/vgb/login.html">登入</a>
-    <a href="/vgb/register.html">註冊</a>
-    <a href="/vgb/search.html">查詢</a>
+    <a href="login.html">登入</a>
+    <a href="register.html">註冊</a>
+    <a href="search.html">查詢</a>
+    <a href="product_list.jsp">產品清單</a>
+    <a href="99table.jsp">99乘法表</a>
     <hr />
     <article style="min-height: 75vh; width: 70%; margin: auto;">
       <h2>
