--- a/VeryGoodBook_Web/WebContent/login.html
+++ b/VeryGoodBook_Web/WebContent/login.html
@@ -26,7 +26,7 @@
   </head>
   <body>
     <hr />
-    <h1><a href="/vgb/index.html">非常好書</a></h1>
+    <h1><a href="/vgb/index.html">非常好書</a><sub>會員登入</sub></h1>
     <hr />
     <form action="login.do" method="post">
       <div style="min-height: 75vh;">
