--- a/VeryGoodBook_Web/WebContent/register.html
+++ b/VeryGoodBook_Web/WebContent/register.html
@@ -19,7 +19,7 @@
     </script>
   </head>
   <body>
-    <h1><a href="/vgb/index.html">非常好書</a></h1>
+    <h1><a href="/vgb/index.html">非常好書</a><sub>會員註冊</sub></h1>
     <form action="register.do" method="post">
       <p>
         <label>帳號:</label>
